updates to docs/output.md, and optimizations

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -74,7 +74,7 @@ process {
 
     withName: PREPARE_FORWARD_READS {
         publishDir = [
-            path: { "${params.outdir}/${params.method}/reference/" },
+            path: { "${params.outdir}/${params.method}/reference/unique_sequences" },
             mode: params.publish_dir_mode,
             pattern: "*.uniq.seqs",
             enabled: params.denovo_intermediate_files
@@ -83,7 +83,7 @@ process {
 
     withName: COMBINE_UNIQUE_READS {
         publishDir = [
-            path: { "${params.outdir}/${params.method}/reference/" },
+            path: { "${params.outdir}/${params.method}/reference/unique_sequences" },
             mode: params.publish_dir_mode,
             pattern: "*_uniq.full.fasta",
             enabled: params.denovo_intermediate_files
@@ -181,7 +181,7 @@ process {
             [
                 path: { "${params.outdir}/${params.method}/reference/rainbow_div" },
                 mode: params.publish_dir_mode,
-                pattern: "*.log",
+                pattern: "*_rbdiv.log",
                 enabled: params.denovo_intermediate_files
             ]
         ]
@@ -225,7 +225,7 @@ process {
     withName: SAMTOOLS_FAIDX {
         ext.args = ''
         publishDir = [
-            path: { "${params.outdir}/${params.method}/reference/index" },
+            path: { "${params.outdir}/${params.method}/reference/samtools/index" },
             mode: params.publish_dir_mode,
             enabled: params.save_reference_indices,
             pattern: "*.fai"
@@ -237,10 +237,10 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/reference/index/" },
+                path: { "${params.outdir}/${params.method}/reference/${params.aligner}/index/" },
                 mode: params.publish_dir_mode,
                 enabled: params.save_reference_indices,
-                pattern: "bwa/*"
+                pattern: "*/*"
             ]
         ]
     }
@@ -263,9 +263,21 @@ process {
         ].join(' ').trim() }
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/samtools_stats/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/bam/" },
                 mode: params.publish_dir_mode,
-                pattern: "*.bam"
+                pattern: "*.bam",
+                enabled: params.save_bam_files
+            ]
+        ]
+    }
+
+    withName: BWAMEM2_INDEX {
+        publishDir = [
+            [
+                path: { "${params.outdir}/${params.method}/reference/${params.aligner}/index/" },
+                mode: params.publish_dir_mode,
+                pattern: "*/*",
+                enabled: params.save_reference_indices
             ]
         ]
     }
@@ -288,9 +300,10 @@ process {
         ].join(' ').trim() }
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/samtools_stats/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/bam/" },
                 mode: params.publish_dir_mode,
-                pattern: "*.bam"
+                pattern: "*.bam",
+                enabled: params.save_bam_files
             ]
         ]
     }
@@ -299,14 +312,16 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/umitools_dedup/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/umitools_dedup/" },
                 mode: params.publish_dir_mode,
-                pattern: "*.bam"
+                pattern: "*.bam",
+                enabled: params.save_bam_files
             ],
             [
-                path: { "${params.outdir}/${params.method}/alignments/umitools_dedup/stats" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/umitools_dedup/stats" },
                 mode: params.publish_dir_mode,
-                pattern: "*.tsv"
+                pattern: "*.tsv",
+                enabled: params.save_bam_files
             ]
         ]
     }
@@ -367,10 +382,10 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/intervals/bedtools_bamtobed/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/intervals/bedtools_bamtobed/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.bed",
-                enabled: params.save_intervals
+                enabled: params.save_bed_intervals
             ]
         ]
     }
@@ -379,10 +394,10 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/intervals/bedops_merge/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/intervals/bedops_merge/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.bed",
-                enabled: params.save_intervals
+                enabled: params.save_bed_intervals
             ]
         ]
     }
@@ -392,10 +407,10 @@ process {
         ext.prefix = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/intervals/bedtools_sort/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/intervals/bedtools_sort/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.bed",
-                enabled: params.save_intervals
+                enabled: params.save_bed_intervals
             ]
         ]
     }
@@ -404,10 +419,10 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/intervals/bedtools_coverage/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/intervals/bedtools_coverage/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.cov",
-                enabled: params.save_intervals
+                enabled: params.save_bed_intervals
             ]
         ]
     }
@@ -416,10 +431,10 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/intervals/bedtools_merge/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/intervals/bedtools_merge/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.cov",
-                enabled: params.save_intervals
+                enabled: params.save_bed_intervals
             ]
         ]
     }
@@ -428,22 +443,22 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/intervals/bedtools_makewindows/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/intervals/bedtools_makewindows/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.tab",
-                enabled: params.save_intervals
+                enabled: params.save_bed_intervals
             ],
             [
-                path: { "${params.outdir}/${params.method}/alignments/intervals/bedtools_makewindows/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/intervals/bedtools_makewindows/" },
                 mode: params.publish_dir_mode,
                 pattern: "_cov.low.stats",
-                enabled: params.save_intervals
+                enabled: params.save_bed_intervals
             ],
             [
-                path: { "${params.outdir}/${params.method}/alignments/intervals/bedtools_makewindows/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/intervals/bedtools_makewindows/" },
                 mode: params.publish_dir_mode,
-                pattern: "_cov.low.stats",
-                enabled: params.save_intervals
+                pattern: "_cov.high.stats",
+                enabled: params.save_bed_intervals
             ]
         ]
     }
@@ -452,10 +467,10 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/intervals/bedtools_intersect/" },
+                path: { "${params.outdir}/${params.method}/alignments//intervals/bedtools_intersect/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.bed",
-                enabled: params.save_intervals
+                enabled: params.save_bed_intervals
             ]
         ]
 
@@ -465,10 +480,10 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/intervals/create_intervals/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/intervals/create_intervals/" },
                 mode: params.publish_dir_mode,
                 pattern: "mapped.*.bed",
-                enabled: params.save_intervals
+                enabled: params.save_bed_intervals
             ]
         ]
     }
