--- a/conf/test.config
+++ b/conf/test.config
@@ -17,20 +17,20 @@ params {
     // Limit resources so that this can run on GitHub Actions
     max_cpus   = 2
     max_memory = '2.GB'
-    max_time   = '6.h'
+    max_time   = '5.m'
 
     input  = '/mnt/d/nextflow_testing/radseq/input.csv'
 
     // Method
     method = 'denovo'
 
-    aligner = 'minimap2'
+    aligner = 'bwamem2'
 
     popmap = 'https://raw.githubusercontent.com/Gabriel-A-Barrett/test-datasets/radseq/testdata/ddRAD/popmap.txt'
 
     // Genome references
     genome = 'https://raw.githubusercontent.com/Gabriel-A-Barrett/test-datasets/radseq/testdata/ddRAD/CM014990.1.fna'
 
-    umi_read_structure               = '--umi --umi_loc=read2 --umi_len=8 --umi_skip=2 --umi_prefix=UMI'
+    umi_read_structure = '--umi --umi_loc=read2 --umi_len=8 --umi_skip=2 --umi_prefix=UMI'
 
 }
