--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,7 @@ params {
 
     // Input options
     input                          = "${baseDir}/data/input.csv"
-    popmap                         = "${baseDir}/data/popmap.txt"
+    popmap                         = null
     
     // Workflow options
     method                         = 'denovo' // e.g.'denovo' or 'reference'
@@ -20,7 +20,7 @@ params {
     sequence_type                  = 'PE' // e.g. 'SE', 'PE', 'RPE', 'ROL', and 'OL'
 
     // Reference options
-    genome                         = '/mnt/d/nextflow_testing/Grayling/data/CM014990.1.fna'
+    genome                         = null
     igenomes_base                  = 's3://ngi-igenomes/igenomes'
     igenomes_ignore                = false
 
@@ -57,7 +57,7 @@ params {
     min_similarity_fraction        = 0.75
 
     // Alignment options
-    aligner                        = 'bwa'
+    aligner                        = 'bwamem'
     clipping_penalty               = '20,5'
     output_secondary               = true
     mark_short_as_sec              = true
@@ -83,7 +83,8 @@ params {
     save_trimmed                   = true
     denovo_intermediate_files      = true
     save_reference_indices         = true
-    save_intervals                 = true
+    save_bam_files                 = true
+    save_bed_intervals             = true
     save_freebayes_intervals       = true
 
     // MultiQC options
@@ -102,7 +103,7 @@ params {
     help                       = false
     validate_params            = true
     show_hidden_params         = false
-    schema_ignore_params       = 'aligner_options,genomes,method_options,publish_dir_mode,method_options,publish_dir_mode,save_freebayes_intervals,save_intervals,save_reference_fai,save_trim_adapters_fastp,save_cdhit_clstr,save_seqtk_seq_fasta,save_uniq_full_fasta,save_uniqseq,save_trimmed,min_repeat_entropy,min_alt_fraction,use_best_n_alleles,complex_gap,min_base_qual,min_map_qual,max_read_coverage_to_split,subset_intervals_channel,quality_score,gap_penalty,mismatch_score,matching_score,min_aln_quality,mark_short_as_sec,output_secondary,clipping_penalty,aligner,min_similarity_fraction,min_overlap,max_reads_for_assembly,max_clusters_for_merge,min_reads,max_variants,similarity_fraction,sequence_simularity,description_length,cluster_algorithm,minreaddepth_betweenindividual,minreaddepth_withinindividual,umi_read_structure,dont_eval_duplicates,trim_polyg,clip_r2,clip_r1,overlap_dif_limit,pairedend_bp_corr,mean_min_quality,window_size,cut_right,sequence_type,method,popmap'
+    schema_ignore_params       = 'aligner_options,genomes,method_options,publish_dir_mode,save_reference_indices,denovo_intermediate_file,method_options,publish_dir_mode,save_freebayes_intervals,save_intervals,save_reference_fai,save_trim_adapters_fastp,save_cdhit_clstr,save_seqtk_seq_fasta,save_uniq_full_fasta,save_uniqseq,save_trimmed,min_repeat_entropy,min_alt_fraction,use_best_n_alleles,complex_gap,min_base_qual,min_map_qual,max_read_coverage_to_split,subset_intervals_channel,quality_score,gap_penalty,mismatch_score,matching_score,min_aln_quality,mark_short_as_sec,output_secondary,clipping_penalty,aligner,min_similarity_fraction,min_overlap,max_reads_for_assembly,max_clusters_for_merge,min_reads,max_variants,similarity_fraction,sequence_simularity,description_length,cluster_algorithm,minreaddepth_betweenindividual,minreaddepth_withinindividual,umi_read_structure,dont_eval_duplicates,trim_polyg,clip_r2,clip_r1,overlap_dif_limit,pairedend_bp_corr,mean_min_quality,window_size,cut_right,sequence_type,method,popmap'
     method_options             = ' denovo, reference'
     aligner_options            = ' bwa, bwamem2'
 
@@ -116,8 +117,8 @@ params {
 
     // Max resource options
     // Defaults only, expecting to be overwritten
-    max_memory                 = '2.GB'
-    max_cpus                   = 5
+    max_memory                 = '128.GB'
+    max_cpus                   = 16
     max_time                   = '240.h'
 
 }
@@ -186,6 +187,7 @@ profiles {
     }
     test      { includeConfig 'conf/test.config'      }
     test_full { includeConfig 'conf/test_full.config' }
+    slurm     { includeConfig 'conf/xanadu.config'    }
 }
 
 // Load igenomes.config if required
