adding bcftools stats and first draft of docs/output.md

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -542,4 +542,15 @@ process {
             ]
         ]
     }
+
+    withName: BCFTOOLS_STATS {
+        ext.args = ''
+        publishDir = [
+            [
+                path: { "${params.outdir}/${params.method}/variant_calling/" },
+                mode: params.publish_dir_mode,
+                pattern: "*stats.txt",
+            ]
+        ]
+    }
 }
