removing enable_conda in params still WARN

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,7 +20,7 @@ params {
     sequence_type                  = 'PE' // e.g. 'SE', 'PE', 'RPE', 'ROL', and 'OL'
 
     // Reference options
-    genome                         = null
+    genome                          = null
     igenomes_base                  = 's3://ngi-igenomes/igenomes'
     igenomes_ignore                = false
 
@@ -136,7 +136,7 @@ try {
 profiles {
     debug { process.beforeScript = 'echo $HOSTNAME' }
     conda {
-        params.enable_conda    = true
+        conda.enabled          = true
         docker.enabled         = false
         singularity.enabled    = false
         podman.enabled         = false
@@ -150,7 +150,7 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
         charliecloud.enabled   = false
-        params.enable_conda    = false
+        conda.enabled           = false
     }
     singularity {
         singularity.enabled    = true
@@ -159,7 +159,7 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
         charliecloud.enabled   = false
-        params.enable_conda    = false
+        onda.enabled           = false
     }
     podman {
         podman.enabled         = true
@@ -167,7 +167,7 @@ profiles {
         singularity.enabled    = false
         shifter.enabled        = false
         charliecloud.enabled   = false
-        params.enable_conda    = false
+        conda.enabled          = false
     }
     shifter {
         shifter.enabled        = true
@@ -175,7 +175,7 @@ profiles {
         singularity.enabled    = false
         podman.enabled         = false
         charliecloud.enabled   = false
-        params.enable_conda    = false
+        conda.enabled          = false
     }
     charliecloud {
         charliecloud.enabled   = true
@@ -183,7 +183,7 @@ profiles {
         singularity.enabled    = false
         podman.enabled         = false
         shifter.enabled        = false
-        params.enable_conda    = false
+        conda.enabled          = false
     }
     test      { includeConfig 'conf/test.config'      }
     test_full { includeConfig 'conf/test_full.config' }
