adding TRIM_FASTP

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -71,6 +71,37 @@ process {
             ]
         ]
     }
+    withName: TRIM_FASTP {
+        ext.args = { [ 
+            params.dont_eval_duplicates ? '--dont_eval_duplication'                             : '',
+            params.clip_r1              ? "--trim_front1 ${params.clip_r1}"                     : '',
+            params.clip_r2              ? "--trim_front2 ${params.clip_r2}"                     : '',
+            params.trim_polyg           ? '--trim_poly_g'                                       : '',
+            '--disable_quality_filtering'
+        ].join(' ').trim() }
+        // umi specific arguments to fastp. see https://github.com/OpenGene/fastp
+        ext.umi_args = params.umi_read_structure ?: ''
+        publishDir = [
+            [
+                path: { "${params.outdir}/denovo/fastp/" },
+                mode: params.publish_dir_mode,
+                pattern: "*.html",
+                enabled: params.denovo_intermediate_files
+            ],
+            [
+                path: { "${params.outdir}/denovo/fastp/" },
+                mode: params.publish_dir_mode,
+                pattern: "*.log",
+                enabled: params.denovo_intermediate_files
+            ],
+            [
+                path: { "${params.outdir}/denovo/fastp/" },
+                mode: params.publish_dir_mode,
+                pattern: "*.fq.gz",
+                enabled: params.denovo_intermediate_files
+            ]
+        ]
+    }
 
     withName: PREPARE_FORWARD_READS {
         publishDir = [
