--- a/conf/test.config
+++ b/conf/test.config
@@ -15,22 +15,25 @@ params {
     config_profile_description = 'Minimal test dataset to check pipeline function'
 
     // Limit resources so that this can run on GitHub Actions
-    max_cpus   = 2
-    max_memory = '2.GB'
-    max_time   = '5.m'
+    max_cpus                   = 2
+    max_memory                 = '1.GB'
+    max_time                   = '10.m'
 
-    input  = '/mnt/d/nextflow_testing/radseq/input.csv'
+    input                      = '/mnt/d/nextflow_testing/radseq/input.csv'
 
     // Method
-    method = 'denovo'
+    method                     = 'denovo'
 
-    aligner = 'bwamem2'
+    aligner                    = 'bwamem2'
 
-    popmap = 'https://raw.githubusercontent.com/Gabriel-A-Barrett/test-datasets/radseq/testdata/ddRAD/popmap.txt'
+    popmap                     = 'https://raw.githubusercontent.com/Gabriel-A-Barrett/test-datasets/radseq/testdata/ddRAD/popmap.txt'
 
     // Genome references
-    genome = 'https://raw.githubusercontent.com/Gabriel-A-Barrett/test-datasets/radseq/testdata/ddRAD/CM014990.1.fna'
+    genome                     = 'https://raw.githubusercontent.com/Gabriel-A-Barrett/test-datasets/radseq/testdata/ddRAD/CM014990.1.fna'
 
-    umi_read_structure = '--umi --umi_loc=read2 --umi_len=8 --umi_skip=2 --umi_prefix=UMI'
+    umi_read_structure         = '--umi --umi_loc=read2 --umi_len=8 --umi_skip=2 --umi_prefix=UMI'
+
+    // Denovo options
+    need_to_trim_fastq         = true
 
 }
