--- a/conf/xanadu.config
+++ b/conf/xanadu.config
@@ -1,14 +1,13 @@
 params {
     // Config options
     custom_config_version      = 'master'
-    custom_config_base         = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
+    custom_config_base         = null //"https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
     config_profile_description = null
     config_profile_contact     = null
     config_profile_url         = null
     config_profile_name        = null
 
     // Max resource options
-    // Defaults only, expecting to be overwritten
     max_memory                 = '500.GB'
     max_cpus                   = 50
     max_time                   = '240.h'
