--- a/nextflow.config
+++ b/nextflow.config
@@ -33,12 +33,13 @@ params {
     clip_r1                          = 6
     clip_r2                          = 3
     trim_polyg                       = true
-    dont_eval_duplicates             = false
+    dont_eval_duplicates             = true
     umi_read_structure               = '--umi --umi_loc=read2 --umi_len=8 --umi_skip=2 --umi_prefix=UMI'
 
     // Denovo options
-    minreaddepth_withinindividual   = null // defaults to 2
-    minreaddepth_betweenindividual  = null // defaults to 2
+    need_to_trim_fastq              = false
+    minreaddepth_withinindividual   = false // defaults to 2
+    minreaddepth_betweenindividual  = false // defaults to 2
     
     // cdhit options 
     cluster_algorithm              = 1 // slow but accurate algorithm (0 or 1)
@@ -57,7 +58,7 @@ params {
     min_similarity_fraction        = 0.75
 
     // Alignment options
-    aligner                        = 'bwamem'
+    aligner                        = 'bwamem2'
     clipping_penalty               = '20,5'
     output_secondary               = true
     mark_short_as_sec              = true
@@ -106,6 +107,8 @@ params {
     schema_ignore_params       = 'aligner_options,genomes,method_options,publish_dir_mode,save_reference_indices,denovo_intermediate_file,method_options,publish_dir_mode,save_freebayes_intervals,save_intervals,save_reference_fai,save_trim_adapters_fastp,save_cdhit_clstr,save_seqtk_seq_fasta,save_uniq_full_fasta,save_uniqseq,save_trimmed,min_repeat_entropy,min_alt_fraction,use_best_n_alleles,complex_gap,min_base_qual,min_map_qual,max_read_coverage_to_split,subset_intervals_channel,quality_score,gap_penalty,mismatch_score,matching_score,min_aln_quality,mark_short_as_sec,output_secondary,clipping_penalty,aligner,min_similarity_fraction,min_overlap,max_reads_for_assembly,max_clusters_for_merge,min_reads,max_variants,similarity_fraction,sequence_simularity,description_length,cluster_algorithm,minreaddepth_betweenindividual,minreaddepth_withinindividual,umi_read_structure,dont_eval_duplicates,trim_polyg,clip_r2,clip_r1,overlap_dif_limit,pairedend_bp_corr,mean_min_quality,window_size,cut_right,sequence_type,method,popmap'
     method_options             = ' denovo, reference'
     aligner_options            = ' bwa, bwamem2'
+    
+    enable_conda               = false
 
     // Config options
     custom_config_version      = 'master'
