--- a/conf/test.config
+++ b/conf/test.config
@@ -19,7 +19,7 @@ params {
     max_memory                 = '1.GB'
     max_time                   = '10.m'
 
-    input                      = '/mnt/d/nextflow_testing/radseq/input.csv'
+    input                      = 'https://raw.githubusercontent.com/Gabriel-A-Barrett/test-datasets/radseq/samplesheet/samplesheet_test_ddRAD.csv'
 
     // Method
     method                     = 'denovo'
