add terneary op to samtools_faidx

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -256,7 +256,7 @@ process {
     withName: SAMTOOLS_FAIDX {
         ext.args = ''
         publishDir = [
-            path: { "${params.outdir}/${params.method}/reference/samtools/index" },
+            path: { ( "${params.method}" == 'denovo' ? "${params.outdir}/${params.method}/referene/samtools/index" : "${params.outdir}/${params.method}/samtools/index" ) },
             mode: params.publish_dir_mode,
             enabled: params.save_reference_indices,
             pattern: "*.fai"
@@ -305,7 +305,7 @@ process {
     withName: BWAMEM2_INDEX {
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/reference/${params.aligner}/index/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/index/" },
                 mode: params.publish_dir_mode,
                 pattern: "*/*",
                 enabled: params.save_reference_indices
@@ -361,9 +361,9 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/samtools_index" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/samtools_index" },
                 mode: params.publish_dir_mode,
-                pattern: "*.bam"
+                pattern: "*.bai"
             ]
         ]
     }
@@ -372,7 +372,7 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/samtools_merge/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/samtools_merge/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.bam"
             ]
@@ -382,7 +382,7 @@ process {
     withName: SAMTOOLS_FLAGSTAT {
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/samtools_stats/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/samtools_stats/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.flagstat"
             ]
@@ -392,7 +392,7 @@ process {
     withName: SAMTOOLS_STATS {
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/samtools_stats/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/samtools_stats/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.stats"
             ]
@@ -402,7 +402,7 @@ process {
     withName: SAMTOOLS_IDXSTATS {
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments/samtools_stats/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/samtools_stats/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.idxstats"
             ]
@@ -498,7 +498,7 @@ process {
         ext.args = ''
         publishDir = [
             [
-                path: { "${params.outdir}/${params.method}/alignments//intervals/bedtools_intersect/" },
+                path: { "${params.outdir}/${params.method}/alignments/${params.aligner}/intervals/bedtools_intersect/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.bed",
                 enabled: params.save_bed_intervals
