--- a/conf/modules.config
+++ b/conf/modules.config
@@ -83,19 +83,19 @@ process {
         ext.umi_args = params.umi_read_structure ?: ''
         publishDir = [
             [
-                path: { "${params.outdir}/denovo/fastp/" },
+                path: { "${params.outdir}/denovo/trim_fastp/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.html",
                 enabled: params.denovo_intermediate_files
             ],
             [
-                path: { "${params.outdir}/denovo/fastp/" },
+                path: { "${params.outdir}/denovo/trim_fastp/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.log",
                 enabled: params.denovo_intermediate_files
             ],
             [
-                path: { "${params.outdir}/denovo/fastp/" },
+                path: { "${params.outdir}/denovo/trim_fastp/" },
                 mode: params.publish_dir_mode,
                 pattern: "*.fq.gz",
                 enabled: params.denovo_intermediate_files
@@ -256,7 +256,7 @@ process {
     withName: SAMTOOLS_FAIDX {
         ext.args = ''
         publishDir = [
-            path: { ( "${params.method}" == 'denovo' ? "${params.outdir}/${params.method}/referene/samtools/index" : "${params.outdir}/${params.method}/samtools/index" ) },
+            path: { ( "${params.method}" == 'denovo' ? "${params.outdir}/${params.method}/reference/samtools/index" : "${params.outdir}/${params.method}/samtools/index" ) },
             mode: params.publish_dir_mode,
             enabled: params.save_reference_indices,
             pattern: "*.fai"
