--- a/nextflow.config
+++ b/nextflow.config
@@ -81,12 +81,12 @@ params {
     min_repeat_entropy             = 0.1
 
     // Intermediate files
-    save_trimmed                   = true
-    denovo_intermediate_files      = true
-    save_reference_indices         = true
-    save_bam_files                 = true
-    save_bed_intervals             = true
-    save_freebayes_intervals       = true
+    save_trimmed                   = false
+    denovo_intermediate_files      = false
+    save_reference_indices         = false
+    save_bam_files                 = false
+    save_bed_intervals             = false
+    save_freebayes_intervals       = false
 
     // MultiQC options
     multiqc_config                 = null
