null config, remove pop from usage.md

--- a/conf/test.config
+++ b/conf/test.config
@@ -23,6 +23,7 @@ params {
 
     // Method
     method                     = 'denovo'
+    sequence_type              = 'PE'
 
     aligner                    = 'bwamem2'
 
@@ -35,5 +36,11 @@ params {
 
     // Denovo options
     need_to_trim_fastq         = true
+
+    // FastP options
+    clip_r1                    = 6
+    clip_r2                    = 3
+    umi_read_structure         = '--umi --umi_loc=read2 --umi_len=8 --umi_skip=2 --umi_prefix=UMI'
+
 
 }
