--- a/nextflow.config
+++ b/nextflow.config
@@ -10,14 +10,14 @@
 params {
 
     // Input options
-    input                          = "${baseDir}/data/input.csv"
+    input                          = null
     popmap                         = null
     
     // Workflow options
-    method                         = 'denovo' // e.g.'denovo' or 'reference'
+    method                         = null // e.g.'denovo' or 'reference'
     
     // Type of RADseq
-    sequence_type                  = 'PE' // e.g. 'SE', 'PE', 'RPE', 'ROL', and 'OL'
+    sequence_type                  = null // e.g. 'SE', 'PE', 'RPE', 'ROL', and 'OL'
 
     // Reference options
     genome                          = null
@@ -30,16 +30,16 @@ params {
     mean_min_quality                 = 20
     pairedend_bp_corr                = true
     overlap_dif_limit                = 1
-    clip_r1                          = 6
-    clip_r2                          = 3
+    clip_r1                          = null
+    clip_r2                          = null
     trim_polyg                       = true
     dont_eval_duplicates             = true
-    umi_read_structure               = '--umi --umi_loc=read2 --umi_len=8 --umi_skip=2 --umi_prefix=UMI'
-
+    umi_read_structure               = null
+    
     // Denovo options
     need_to_trim_fastq              = false
-    minreaddepth_withinindividual   = false // defaults to 2
-    minreaddepth_betweenindividual  = false // defaults to 2
+    minreaddepth_withinindividual   = null // defaults to 2
+    minreaddepth_betweenindividual  = null // defaults to 2
     
     // cdhit options 
     cluster_algorithm              = 1 // slow but accurate algorithm (0 or 1)
